# hydrata-mcp-server

./: LICENSE  README.md  pyproject.toml  server.json
hydrata_mcp/: __init__.py  client.py  config.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_server.py
