[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrata-mcp-server"
version = "0.1.0"
description = "MCP server for Hydrata hydraulic modeling platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.scripts]
hydrata-mcp = "hydrata_mcp.server:main"
